--- a/views/pages/asambleistas.ejs
+++ b/views/pages/asambleistas.ejs
@@ -11,7 +11,20 @@
     <section id="content">
         	<% for (var i = 0; i < asambleistas.length ; i++){ %>
             <div class="asambleista">
-            <h4>Partido: <%= asambleistas[i].partido%></h4>
+            <h4>Lista: </h4><%= asambleistas[i].lista%>
+            <h4>Partido: </h4><%= asambleistas[i].partido%>
+            <br>
+            <img src='/<%= asambleistas[i].imagenLista %>' width='50px'>
+            <h4>Candidatos</h4>
+             <%
+                        for (candi of asambleistas[i].candidatos){%>
+                            <%= candi %>
+                            <br>
+                        <%
+                        }
+                        %>
+            
+        
 
 
             </div>
