--- a/views/pages/asambleistas.ejs
+++ b/views/pages/asambleistas.ejs
@@ -16,13 +16,15 @@
             <br>
             <img src='/<%= asambleistas[i].imagenLista %>' width='50px'>
             <h4>Candidatos</h4>
+
              <%
                         for (candi of asambleistas[i].candidatos){%>
-                            <%= candi %>
+                            *<%= candi %>
                             <br>
                         <%
                         }
                         %>
+
             
         
 
