--- a/public/css/style.css
+++ b/public/css/style.css
@@ -417,6 +417,15 @@ footer{
     padding: 20px;
 }
 
+
+.asambleista{    
+    position: relative;
+    display: block;
+    width: 150px;
+    border: black solid 1px;
+    margin-right: 20px;
+}
+
 @media only screen and (min-width: 481px){
     .form-Container{
         width: 440px;
