--- a/views/pages/binomios.ejs
+++ b/views/pages/binomios.ejs
@@ -11,7 +11,7 @@
     <section id="content">
            
         	<% for (var i = 0; i < binomios.length ; i++){ %>
-            <div class="binomios">
+            <div class="col-xs-12 col-sm-4 col-lg-2">
             <h4>Partido: </h4> <h5><%= binomios[i].partido%></h5> <br>
             <h4>Lista: </h4><h5><%= binomios[i].lista%></h5>     <br> 
             <img src='/<%= binomios[i].imagenLista %>' width='50px'> <br>
