--- a/public/css/style.css
+++ b/public/css/style.css
@@ -482,18 +482,10 @@ footer{
         height: 100%;
     }
 }
-.votar {
- 
-}
 
-.binomios {
-      display: inline-block;
-    width: 100%;
-    padding: 20px;
-    margin-top: 80px;
-    
-    overflow: auto;
-    
-    /*background-color: antiquewhite;*/
-    align-items: center;
+
+
+
+.contenedorVotar {
+  
 }
