--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,5 +8,11 @@
     <script src="/js/datos.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/callbacks.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/js/bootstrap.min.js"></script>
+    <link href="/css/bootstrap.css" rel="stylesheet">
+
     <link rel=StyleSheet href="/css/style.css" type="text/css">
     <link rel="icon" sizes="256x256" href="/images/icon.png">
