--- a/public/css/style.css
+++ b/public/css/style.css
@@ -489,3 +489,17 @@ footer{
 .contenedorVotar {
   
 }
+
+.binomios {
+    border-style: solid;
+    border-width: thin;
+   height: 600px;
+    width: 200px;
+    margin-top: 100px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    
+}
+
+
