--- a/views/pages/binomios.ejs
+++ b/views/pages/binomios.ejs
@@ -8,21 +8,25 @@
     
     <% include ../partials/adminMenu %>
     
-    <section id="content">
+   
+           <div class="papeleta">
+               
            
         	<% for (var i = 0; i < binomios.length ; i++){ %>
-            <div class="col-xs-12 col-sm-4 col-lg-2">
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1 binomios"  >
             <h4>Partido: </h4> <h5><%= binomios[i].partido%></h5> <br>
             <h4>Lista: </h4><h5><%= binomios[i].lista%></h5>     <br> 
-            <img src='/<%= binomios[i].imagenLista %>' width='50px'> <br>
+            
+           
+            <img src='/<%= binomios[i].imagenLista %>' width='50px' height="60px"> <br>
             
             <button class='votar'> <img src='/images/vote_icon.png'> </button> <br><br>
-            
+          
                            
-                            <img src='/<%= binomios[i].imagenPresi %>' width='50px'> <br>
+                            <img src='/<%= binomios[i].imagenPresi %>' width='50px' height="60px"> <br>
                             <h4> <%= binomios[i].presidente%></h4> <br>
                            
-                             <img src='/<%= binomios[i].imagenVice %>' width='50px'> <br>
+                             <img src='/<%= binomios[i].imagenVice %>' width='50px'height="60px"> <br>
                             <h4><%= binomios[i].vicepresidente%> </h4>
                             
                         
@@ -33,6 +37,6 @@
             </div>
 	    <% } %>
    
-    </section>
+    </div>
 </body>
 </html>
