--- a/views/pages/binomios.ejs
+++ b/views/pages/binomios.ejs
@@ -6,12 +6,12 @@
 <body>
     <% include ../partials/header %>
     
-    <% include ../partials/adminMenu %>
+    
     
    
            <div class="papeleta">
-               
-           
+              
+           <h1>Eleccionens Generales 2017</h1>
         	<% for (var i = 0; i < binomios.length ; i++){ %>
             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1 binomios"  >
             <h4>Partido: </h4> <h5><%= binomios[i].partido%></h5> <br>
