--- a/views/pages/encue.ejs
+++ b/views/pages/encue.ejs
@@ -5,13 +5,15 @@
 </head>
 <body>
     <% include ../partials/header %>
+    <div class="encuestadorInicio">
+        <h1>Sistema de encuestador de registro de votos</h1> <br>
+         <button id='btnEncuestaNueva'>Nuevo Voto</button>
     
-    <% include ../partials/encueMenu %>
+    </div>
     
-    <section id="content">
-        Welcome ENCUE!!
-        <button id='btnEncuestaNueva'>Nuevo Voto</button>
+    
    
-    </section>
+      
+    
 </body>
 </html>
