--- a/views/pages/binomios.ejs
+++ b/views/pages/binomios.ejs
@@ -12,6 +12,7 @@
            <div class="papeleta">
               
            <h1>Eleeciones Generales 2017</h1>
+           <h2>Elíja a un binomio presidencial</h2>
         	<% for (var i = 0; i < binomios.length ; i++){ %>
             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-1 binomios"  >
             <div class="rowElementoPartido">
@@ -28,7 +29,7 @@
            </div>
 
             <div class="rowElementobtnVotar">
-                <button class='votar'> <img src='/images/vote_icon.png'> </button> 
+                <button id='btnVotar'> <img src='/images/vote_icon.png'> </button> 
             </div>
             <hr>
            
