--- a/views/pages/CRUDinsert.ejs
+++ b/views/pages/CRUDinsert.ejs
@@ -33,7 +33,7 @@
                                     <input type='text' name='<%= attr %>' class='form-TextBox' value='<%= obj[attr] %>'>
                                 <% } %>
                             <% } %>
-                            <input id='saveButton' class='form-button' type='button' value='Actualizar' onclick='update()'>
+                            <input id='saveButton' class='form-button' type='button' value='Actualizar' onclick='updateRow("<%= obj.id %>", "<%= tableName %>")'>
                     <% } %>
                    
                     <input id='cancelButton' class='form-button' value='Cancelar' onclick='window.location.assign("/admin/<%= tableName %>")'>
