voto temporal binomio

--- a/views/pages/binomios.ejs
+++ b/views/pages/binomios.ejs
@@ -29,7 +29,8 @@
            </div>
 
             <div class="rowElementobtnVotar">
-                <button id='btnVotar'> <img src='/images/vote_icon.png'> </button> 
+                <button onclick='votoBinomio("<%=binomios[i].id%>",<%=cedula%>)'> <img  src='/images/vote_icon.png'> </button>
+                
             </div>
             <hr>
            
