Revert "voto temporal binomio"
This reverts commit 9256b63d1a944e31176ec086d00038b3e9699574.

--- a/views/pages/asambleistas2.ejs
+++ b/views/pages/asambleistas2.ejs
@@ -29,7 +29,7 @@
            </div>
 
             <div class="rowElementobtnVotar">
-                <button onclick='votoAsambleistas("<%=asambleistas[i].id%>")'> <img  src='/images/vote_icon.png'> </button>
+                <button id='btnVotar'> <img src='/images/vote_icon.png'> </button> 
             </div>
             <hr>     <h4>Candidatos:</h4>
  <ol>
