--- a/views/pages/CRUDTable.ejs
+++ b/views/pages/CRUDTable.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/head %>
 </head>
 <body>
-    <% include ../partials/header %>
+    <% include ../partials/header_logged  %>
     <% include ../partials/adminMenu %>
     <section id="content">   
         <div class='CRUDContainer'>
