--- a/views/pages/CRUDinsert.ejs
+++ b/views/pages/CRUDinsert.ejs
@@ -36,7 +36,7 @@
                             <input id='saveButton' class='form-button' type='button' value='Actualizar' onclick='updateRow("<%= obj.id %>", "<%= tableName %>")'>
                     <% } %>
                    
-                    <input id='cancelButton' class='form-button' value='Cancelar' onclick='window.location.assign("/admin/<%= tableName %>")'>
+                    <input id='cancelButton' class='form-button' type="button" value='Cancelar' onclick='window.location.assign("/admin/<%= tableName %>")'>
                 </form>
             </div>
 
