--- a/views/pages/asambleistas2.ejs
+++ b/views/pages/asambleistas2.ejs
@@ -29,7 +29,7 @@
            </div>
 
             <div class="rowElementobtnVotar">
-                <button id='btnVotar'> <img src='/images/vote_icon.png'> </button> 
+                <button id='btnVotar' onclick='votarAsambleista("<%= asambleistas[i].id %>", "<%= cedula %>")'> <img src='/images/vote_icon.png'> </button> 
             </div>
             <hr>     <h4>Candidatos:</h4>
  <ol>
