--- a/views/pages/resumen.ejs
+++ b/views/pages/resumen.ejs
@@ -9,13 +9,42 @@
   <div class="contenedorResumen">
      <h2>Cédula:<%= votacion.id %> </h2>
      
-     <h2>Binomio: <%= votacion.binomio %> </h2>  
-    <h2>Asmbleísta: <%= votacion.asambleista %></h2>
-    <h2> Parlamentario:  <%= votacion.parlamentario %></h2>    
+<!--
+     <% for (var i = 0; i < binomios.length ; i++){
+      if(binomios[i].id==votacion.binomio){ %>
+          <h2>Binomio: <%= binomios[i].partido %> </h2> 
+      <%}%>
+      
+      <%}%>
+-->
+     <% for (var i = 0; i < binomios.length ; i++){
+      if(binomios[i].id==votacion.binomio){ %>
+          <h2>Binomios: <%= binomios[i].partido %> </h2> 
+      <%}%>
+      
+      <%}%>
+       
+        <% for (var i = 0; i < asambleistas.length ; i++){
+      if(asambleistas[i].id==votacion.asambleista){ %>
+          <h2>Asambleistas: <%= asambleistas[i].partido %> </h2> 
+      <%}%>
+      
+      <%}%>
+      
+         <% for (var i = 0; i < parlamentarios.length ; i++){
+      if(parlamentarios[i].id==votacion.parlamentario){ %>
+          <h2>Parlamentarios: <%= parlamentarios[i].partido %> </h2> 
+      <%}%>
+      
+      <%}%>
+     
+      
+ 
           <br>
          
         <%= votacion.mod %> <br>
-     
+        
+     <button  onclick='registraVoto("<%= binomios%>", "<%= asambleistas %>", "<%= parlamentarios %>", "<%= votacion %>")'>Registrar Voto </button> 
   </div>
     
    
