imagen usuario encue

--- a/views/pages/encue.ejs
+++ b/views/pages/encue.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/head %>
 </head>
 <body>
-    <% include ../partials/header %>
+    <% include ../partials/header_logged %>
     <div class="encuestadorInicio">
         <h1>Sistema de encuestador de registro de votos</h1> <br>
          <button id='btnEncuestaNueva'>Nuevo Voto</button>
