--- a/views/pages/resumen.ejs
+++ b/views/pages/resumen.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/head %>
 </head>
 <body>
-    <% include ../partials/header %>
+    <% include ../partials/header_logged %>
     
   <div class="contenedorResumen">
      <h2>Cédula:<%= votacion.id %> </h2>
