--- a/views/pages/resumen.ejs
+++ b/views/pages/resumen.ejs
@@ -37,7 +37,8 @@
          
         <%= votacion.mod %> <br>
         
-     <button  onclick='registraVoto("<%= binomios%>", "<%= asambleistas %>", "<%= parlamentarios %>", "<%= votacion %>")'>Registrar Voto </button> 
+     <button  onclick='registraVoto("<%= votacion.id %>", "<%= votacion.binomio %>", "<%= votacion.asambleista %>""<%= votacion.parlamento %>")'>Registrar Voto </button> 
+     <button> Cancelar</button>
   </div>
     
    
