--- a/views/pages/resumen.ejs
+++ b/views/pages/resumen.ejs
@@ -37,8 +37,8 @@
          
         <%= votacion.mod %> <br>
         
-     <button  onclick='registraVoto("<%= votacion.id %>", "<%= votacion.binomio %>", "<%= votacion.asambleista %>""<%= votacion.parlamento %>")'>Registrar Voto </button> 
-     <button> Cancelar</button>
+     <button  onclick='registraVoto("<%= votacion.id %>", "<%= votacion.binomio %>", "<%= votacion.asambleista %>","<%= votacion.parlamentario %>")'>Registrar Voto </button> 
+     <button onclick="window.location.assign('/encue')">Cancelar</button>
   </div>
     
    
